facet-args/tests/integration/snapshots/main__integration__help__help_enum_only.snap
---
source: facet-args/tests/help.rs
expression: help
---
git

Available git commands

[1m[33mUSAGE[39m[0m:
    git <COMMAND>

[1m[33mCOMMANDS[39m[0m:
    [32mclone[39m
            Clone a repository
    [32mlog[39m
            Show commit history
    [32mremote[39m
            Manage remotes
