facet-args/tests/integration/snapshots/main__integration__help__help_simple_struct.snap
---
source: facet-args/tests/help.rs
expression: help
---
myapp 1.0.0

A sample CLI application for testing help generation.

This is a longer description that spans multiple lines
to test how doc comments are handled.

[1m[33mUSAGE[39m[0m:
    myapp [OPTIONS] <INPUT> [OUTPUT]

[1m[33mARGUMENTS[39m[0m:
        [32m<INPUT>[39m
            Input file to process
        [32m<OUTPUT>[39m
            Output file (optional)

[1m[33mOPTIONS[39m[0m:
    [32m-v[39m, [32m--verbose[39m
            Enable verbose output
    [32m-j[39m, [32m--jobs[39m <OPTION>
            Number of parallel jobs
