facet-args/tests/integration/snapshots/main__integration__help__help_with_subcommands.snap
---
source: facet-args/tests/help.rs
expression: help
---
git 2.40.0

Git-like CLI with subcommands

[1m[33mUSAGE[39m[0m:
    git [OPTIONS] <COMMAND>

[1m[33mOPTIONS[39m[0m:
        [32m--version[39m
            Show version information

[1m[33mCOMMANDS[39m[0m:
    [32mclone[39m
            Clone a repository
    [32mlog[39m
            Show commit history
    [32mremote[39m
            Manage remotes
