facet-args/tests/integration/snapshots/main__integration__help__nested_subcommand_help_colored_snapshot.snap
---
source: facet-args/tests/help.rs
expression: help
---
command add

Add a new remote

[1m[33mUSAGE[39m[0m:
    command add <NAME> <URL>

[1m[33mARGUMENTS[39m[0m:
        [32m<NAME>[39m
            Name of the remote
        [32m<URL>[39m
            URL of the remote
